Fix visibility checkbox on login form (for tests)

--- a/src/components/common/Checkbox/Checkbox.scss
+++ b/src/components/common/Checkbox/Checkbox.scss
@@ -80,7 +80,7 @@
   width: 2rem;
   max-width: 2rem;
   height: 2rem;
-  visibility: hidden;
+  opacity: 0;
 }
 
 .input:checked {
